# AnimationBigBang

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: out.dex
app/src/main/res/anim/: anim_no_slide.xml  anim_slide_in_right.xml  anim_slide_out_right.xml
app/src/main/res/drawable/: draw_layer_list_splash.xml  (+5 more)
app_common/: build.gradle
app_common/src/main/: AndroidManifest.xml
app_data/: build.gradle
app_domain/: build.gradle
app_presenter/: build.gradle
apt_api/: build.gradle
apt_api/src/main/: AndroidManifest.xml
apt_compiler/: build.gradle
build-tools/: app-config-android.gradle  app-config.gradle  dependencies.gradle  ds-butter-knife.gradle  ds-dagger.gradle  ds-test.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  build.gradle
jni/src/androidTest/java/com/example/jni/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/java/com/example/jni/: JniUtils.java
jni/src/main/jni/: native-lib.cpp
lib_arouter/: build.gradle
lib_arouter/src/main/: AndroidManifest.xml
lib_arouter_test/: build.gradle
lib_arouter_test/src/main/: AndroidManifest.xml
lib_greendao/: build.gradle
lib_greendao/src/main/: AndroidManifest.xml
lib_httpclient/: build.gradle
lib_httpclient/src/main/: AndroidManifest.xml
lib_imageselector/: build.gradle
lib_imageselector/src/main/: AndroidManifest.xml
lib_javassist_plugin/: build.gradle
lib_server/: build.gradle
lib_server/src/main/: AndroidManifest.xml
(+358 files in other folders)
